--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <div class="bubble-text">Happy 8th<br>Birthday Tori!</div>
     <button id="musicToggle">🎵 Play Music</button>
     <audio id="birthdaySong" loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+    <source src="/Happy-Birthday-Tori/audio/Busy Signal - Happy Birthday (AI Video).mp3" type="audio/mp3">
     </audio>
     <script src="/Happy-Birthday-Tori/js/app.js"></script>
 </body>
